[metadata]
name = chartinkbyvk
version = 0.0
description = chartinkbyvk is a simple Interactive CLI to fetch union/intersect of multiple Chartink scans
long_description = file: README.md
long_description_content_type = text/markdown
author = vk datta
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
